--- a/scss/pages/home-page/_hero-section.scss
+++ b/scss/pages/home-page/_hero-section.scss
@@ -20,7 +20,6 @@
     .swiper-slide {
       background-size: cover;
       background-position: center center;
-      background-attachment: fixed;
     }
 
     .slide-1 {
